<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Secured Entrance System "</string>
    <string name="action_settings">Settings</string>
    
    <string name="start_page_title">Request Page</string>
    <string name="resident_info_title">Resident Information</string>
    <string name="visitor_info_title">Visitor Information</string>
    <string name="first_name_field">First Name</string>
    <string name="last_name_field">Last Name</string>
    <string name="gtid_field">GT ID</string>
    <string name="first_name_field_hint">e.g. John </string>
    <string name="last_name_field_hint">e.g. Smith</string>
    <string name="gtid_field_hint">e.g. 90XXXXXXX (Nine digit Number)</string>
    
    <string name="success_image_content_desc">Image for Successful Request Entered into Database</string>

    <string name="failure_image_content_desc">Image for Failed Request</string>

</resources>